# coworld

./: AGENTS.md  BUILD.bazel  CERTIFIER_PRD.md  COGAME_README.md  COOKBOOK.md  COWORLD_README.md  Dockerfile.certifier  Dockerfile.coworld  LESSONS.md  README.md  SCHEMA_PRD.md  cogame_manifest_schema.json  coworld_manifest_schema.json  episode_request_schema.json  pyproject.toml
.claude/skills/upload-player-artifact/: SKILL.md
.github/workflows/: sync-issues-to-asana.yml
docs/coworlds-expert-agent/: README.md  coworlds-expert.md
docs/coworlds-expert-agent/knowledge/: coworld-design-principles.md  coworld-schema-current-state.md  player-policy-design.md  working-with-people-on-design.md
docs/coworlds-expert-agent/skills/upload-player-artifact/: SKILL.md
examples/bitworld/: cogame_manifest.json
examples/cogs_vs_clips/: README.md  coworld_manifest.json
examples/cogs_vs_clips/game/: Dockerfile  server.py
examples/cogs_vs_clips/game/clients/: admin.html  global.html  player.html  replay.html
examples/cogs_vs_clips/game/docs/: global_protocol_spec.md  player_protocol_spec.md
examples/cogs_vs_clips/player/: player.py
examples/paintarena/: README.md  coworld_manifest.json
examples/paintarena/game/: cogame_manifest.json  server.py
examples/paintarena/game/clients/: admin.html  global.html  player.html  replay.html
examples/paintarena/game/docs/: global_protocol_spec.md
examples/paintarena/player/: player.py
examples/tictactoe/: coworld_manifest.json
examples/tictactoe/clients/: global.html  player.html
examples/tictactoe/game/: Dockerfile  cogame_manifest.json  server.py
examples/tictactoe/game/clients/: global.html  player.html  replay.html
examples/tictactoe/game/docs/: global_protocol_spec.md  player_protocol_spec.md
examples/tictactoe/player/: Dockerfile  player.py
scripts/: generate_coworld_schemas.py
src/coworld/: API_GUIDE.md  CLI_README.md  COGAME_README.md  COWORLD_README.md  EPISODE_BUNDLE_README.md  GAME_RUNTIME_README.md  MANIFEST_README.md  __init__.py  __main__.py  api_client.py  bundle.py  certification_report.py  certifier.py  cli.py  cli_support.py  config.py  coworld_manifest_schema.json  episode_bundle.py  episode_runner.py  image_refs.py  manifest_uri.py  manifest_validation.py  play.py  report.py  schema_validation.py  starter_policy.py  submit.py  tournament_cli.py  types.py  upload.py
src/coworld/commissioner/: __init__.py  protocol.py
src/coworld/docs/: AUTHORING.md  BEDROCK.md  COWORLD_MANIFEST.md  LIFECYCLE.md  MACOS.md  README.md  REBUILDING_COWORLDS.md  STATIC_REPLAY_VIEWERS.md
src/coworld/docs/artifacts/: DEBUG_ARCHIVE.md  DIAGNOSIS.md  EPISODE_BUNDLE.md  ERROR_INFO.md  EVENT_LOG.md  GAME_LOGS.md  GRADE.md  OPTIMIZER_OUTPUTS.md  PLAYER_ARTIFACT.md  PLAYER_LOGS.md  README.md  RENDER.md  REPLAY.md  REPORT.md  RESULTS.md  ROUND_DECISIONS.md  TRACE.md
src/coworld/docs/roles/: COMMISSIONER.md  DIAGNOSER.md  GAME.md  GRADER.md  OPTIMIZER.md  OVERVIEW.md  PLAYER.md  REPORTER.md  commissioner.md  diagnoser.md  game.md  grader.md  optimizer.md  player.md  reporter.md
src/coworld/examples/cogs_vs_clips/: README.md  coworld_manifest.json
src/coworld/examples/cogs_vs_clips/game/: Dockerfile  server.py
src/coworld/examples/cogs_vs_clips/player/: Dockerfile
src/coworld/examples/paintarena/: Dockerfile  README.md  compose.yaml  coworld_manifest.json  coworld_manifest_template.json
src/coworld/examples/paintarena/diagnoser/: __init__.py  paint_arena_diagnoser.py
src/coworld/optimizer/: __init__.py  runtime.py
src/coworld/policies/: __init__.py  amongthem_policy_template.py
src/coworld/policies/amongthemstarter/: .dockerignore  Dockerfile.amongthemstarter  README.md  amongthemstarter.nim  coplayer_manifest.json
src/coworld/policies/cogs_vs_clips/: .dockerignore  Dockerfile.cogs_vs_clips  README.md  player.py
src/coworld/policies/cvcstarter/: README.md  player.py
src/coworld/reporter/: protocol.py
src/coworld/runner/: KUBERNETES_RUNNER_README.md  RUNNER_README.md  __init__.py  bedrock_enablement.py  bedrock_sidecar_wiring.py  episode_request_schema.json  io.py  kubernetes_runner.py  phase_timings.py  runner.py
src/coworld/templates/: README.md
src/coworld/transcripts/: coworld-executable.transcript.md
src/coworld/wit/softmax-reporter/: world.wit
templates/optimizers/202624/richard-higgins-crewrift-player-optimizer/: AGENTS.md  LOOP.md  MANIFEST.md  METADATA.md  REVIEW.md  null-tier.md  review.html
templates/optimizers/242026/: METADATA.md  TIERS.md  null-tier.md
templates/optimizers/242026/coworld-player-generic/: AGENTS.md  MANIFEST.md
templates/optimizers/242026/crewrift-specific/: AGENTS.md  LOOP.md  MANIFEST.md
templates/optimizers/242026/generic/: AGENTS.md  MANIFEST.md
templates/optimizers/242026/universal/: AGENTS.md  LOOP.md  MANIFEST.md
templates/optimizers/252026/jboggs-crewrift-player-optimizer/: AGENTS.md  METADATA.md  REVIEW.md  null-tier.md
tests/: BUILD.bazel  conftest.py  test_api_client.py  test_canonical_worlds.py  test_certifier.py  test_cli_support.py  test_cogs_vs_clips_coworld.py  test_cogs_vs_clips_policy_player.py  test_commissioner_docs.py  test_commissioner_protocol.py  test_coworld_artifact_docs.py  test_coworld_bundle.py  test_coworld_certifier.py  test_coworld_certify_docs.py  test_coworld_cli_manifest_uri.py  test_coworld_cookbook.py  test_coworld_episode_bundle.py  test_coworld_experience_request_cli.py  test_coworld_kubernetes_runner.py  test_coworld_league_cli.py  test_coworld_macos_docs.py  test_coworld_make_policy.py  test_coworld_manifest_uri.py  test_coworld_optimize_cli.py  test_coworld_player_cli.py  test_coworld_report.py  test_coworld_runner_io.py  test_coworld_submit_cli.py  test_coworld_templates.py  test_coworld_tournament_cli.py  test_coworld_upload_cli.py  test_manifest_validation.py  test_paintarena_diagnoser.py  test_paintarena_grader.py  test_paintarena_optimizer.py  test_paintarena_replay_loader.py  test_paintarena_reporter.py  test_paintarena_reporter_http_io.py  test_paintarena_stats_reporter.py  test_reporter_protocol.py  (+1 more)
(+243 files in other folders)
