load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# Build the paintarena example image via the host docker daemon. Tags the
# image `coworld-paintarena:latest` in the local docker store and writes a
# digest-pinned reference (`coworld-paintarena@sha256:<digest>`) to the
# output file so downstream consumers can address the exact build.
#
# Tagged `manual` so it stays out of `//...` wildcard builds — CI runners
# without a docker daemon would otherwise fail the wildcard.
genrule(
    name = "paintarena_image",
    srcs = [
        "src/coworld/examples/paintarena/Dockerfile",
        "src/coworld/examples/paintarena/__init__.py",
    ] + glob([
        "src/coworld/examples/paintarena/game/**",
        "src/coworld/examples/paintarena/optimizer/**",
        "src/coworld/examples/paintarena/player/**",
        "src/coworld/examples/paintarena/reporter/**",
        "src/coworld/examples/paintarena/shared/**",
    ]),
    outs = ["paintarena_image.ref"],
    cmd = """
set -euo pipefail
# Bazel sanitizes PATH for actions; ensure standard host locations are
# searched so the host docker (or podman shimming docker) is reachable.
export PATH="/run/current-system/sw/bin:/usr/local/bin:/usr/bin:/bin$${PATH:+:$$PATH}"
ctx=$$(dirname $(location src/coworld/examples/paintarena/Dockerfile))
iidfile=$$(mktemp)
trap 'rm -f "$$iidfile"' EXIT
docker build --iidfile "$$iidfile" --tag coworld-paintarena:latest "$$ctx" >&2
iid=$$(cat "$$iidfile")
echo "coworld-paintarena@$$iid" > $@
""",
    local = 1,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# `:coworld_core` is the import-surface every external library consumer
# (//app_backend, //metta:metta_obs, //worlds) actually needs:
#
#   coworld.types, coworld.certifier, coworld.manifest_validation,
#   coworld.schema_validation, coworld.commissioner.protocol,
#   coworld.runner.io, coworld.runner.runner — plus the transitive
#   imports of `coworld.__init__`'s eager facade (certifier, play,
#   runner.runner, types).
#
# Everything else — the CLI (`cli.py`, `tournament_cli.py`,
# `bundle.py`, `submit.py`, `upload.py`, `starter_policy.py`,
# `manifest_uri.py`, `__main__.py`), the example servers under
# `examples/**`, the policy templates under `policies/**`, and the
# kubernetes runner that only the CLI and tests load — stays in
# `:coworld`. Action keys for downstream tests that only hit the
# library surface no longer flip when CLI / example / policy files
# change.
#
# `coworld_manifest_schema.json` and `runner/episode_request_schema.json`
# are NOT in `data` on either target: nothing reads them at runtime
# (they're generated dynamically from pydantic via
# `coworld.types.coworld_manifest_schema()` /
# `coworld.types.coworld_episode_request_schema()`). The on-disk
# copies exist only as docs / `$schema` URLs referenced from READMEs.
_CORE_SRCS = [
    "src/coworld/__init__.py",
    "src/coworld/certifier.py",
    "src/coworld/commissioner/__init__.py",
    "src/coworld/commissioner/protocol.py",
    "src/coworld/manifest_validation.py",
    "src/coworld/play.py",
    "src/coworld/runner/__init__.py",
    "src/coworld/runner/io.py",
    "src/coworld/runner/runner.py",
    "src/coworld/schema_validation.py",
    "src/coworld/types.py",
]

py_library(
    name = "coworld_core",
    srcs = _CORE_SRCS,
    data = ["src/coworld/py.typed"],
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "@pyenv//:httpx",
        "@pyenv//:jsonschema",
        "@pyenv//:packaging",
        "@pyenv//:pydantic",
        "@pyenv//:referencing",
        "@pyenv//:websockets",
    ],
)

py_library(
    name = "coworld",
    srcs = glob(
        ["src/coworld/**/*.py"],
        exclude = _CORE_SRCS,
    ),
    # Runtime data for the CLI and the example servers. Library
    # consumers don't need any of this; they get `py.typed` via
    # `:coworld_core` and nothing else.
    data = glob(
        [
            "src/coworld/examples/**/*.py",
            "src/coworld/examples/**/*.json",
            "src/coworld/examples/**/*.html",
            "src/coworld/policies/amongthemstarter/**/*",
            "src/coworld/policies/amongthemstarter/.dockerignore",
        ],
        allow_empty = True,
    ),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        ":coworld_core",
        "//packages/softmax-cli:softmax",
        "@pyenv//:cogsguard",
        "@pyenv//:fastapi",
        "@pyenv//:httpx",
        "@pyenv//:jsonschema",
        "@pyenv//:kubernetes",
        "@pyenv//:mettagrid",
        "@pyenv//:numpy",
        "@pyenv//:pyarrow",
        "@pyenv//:pydantic",
        "@pyenv//:referencing",
        "@pyenv//:requests",
        "@pyenv//:rich",
        "@pyenv//:typer",
        "@pyenv//:uvicorn",
        "@pyenv//:websockets",
    ],
)

py_binary(
    name = "coworld_bin",
    srcs = ["src/coworld/cli.py"],
    main = "src/coworld/cli.py",
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [":coworld"],
)
