# Not pyproject_library: hand-split into :coworld_core (importable
# library surface) + :coworld (CLI/examples) + :coworld_bin
# for action-key isolation — edits under examples/, cli.py
# don't re-key tests that only need the library surface.
# pyproject_library emits a single target per pyproject and can't
# express the split. (PR #14752 reverted an attempted two-dist split
# of the package that would have let this become two pyproject_library
# calls.)
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# Build the paintarena example image via the host docker daemon. Tags the
# image `coworld-paintarena:latest` in the local docker store and writes a
# digest-pinned reference (`coworld-paintarena@sha256:<digest>`) to the
# output file so downstream consumers can address the exact build.
#
# Tagged `manual` so it stays out of `//...` wildcard builds — CI runners
# without a docker daemon would otherwise fail the wildcard.
genrule(
    name = "paintarena_image",
    srcs = [
        "src/coworld/examples/paintarena/Dockerfile",
        "src/coworld/examples/paintarena/__init__.py",
    ] + glob([
        "src/coworld/examples/paintarena/game/**",
        "src/coworld/examples/paintarena/optimizer/**",
        "src/coworld/examples/paintarena/player/**",
        "src/coworld/examples/paintarena/reporter/**",
        "src/coworld/examples/paintarena/shared/**",
    ]),
    outs = ["paintarena_image.ref"],
    cmd = """
set -euo pipefail
# Bazel sanitizes PATH for actions; ensure standard host locations are
# searched so the host docker (or podman shimming docker) is reachable.
export PATH="/run/current-system/sw/bin:/usr/local/bin:/usr/bin:/bin$${PATH:+:$$PATH}"
ctx=$$(dirname $(location src/coworld/examples/paintarena/Dockerfile))
iidfile=$$(mktemp)
trap 'rm -f "$$iidfile"' EXIT
# Cloudflare Containers run amd64; build for that arch so the image is
# pullable there even when built on an arm64 (Apple Silicon) dev machine.
docker build --platform linux/amd64 --iidfile "$$iidfile" --tag coworld-paintarena:latest "$$ctx" >&2
iid=$$(cat "$$iidfile")
echo "coworld-paintarena@$$iid" > $@
""",
    local = 1,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# `:coworld_core` is the import-surface every external library consumer
# (//app_backend, //metta:metta_obs, //worlds) actually needs:
#
#   coworld.types, coworld.certifier, coworld.manifest_validation,
#   coworld.schema_validation, coworld.commissioner.protocol,
#   coworld.runner.io, coworld.runner.runner — plus the transitive
#   imports of `coworld.__init__`'s eager facade (certifier, play,
#   runner.runner, types).
#
# Everything else — the CLI (`cli.py`, `tournament_cli.py`,
# `bundle.py`, `submit.py`, `upload.py`,
# `manifest_uri.py`, `__main__.py`), the example servers under
# `examples/**`, and the
# kubernetes runner that only the CLI and tests load — stays in
# `:coworld`. Action keys for downstream tests that only hit the
# library surface no longer flip when CLI / example files
# change.
#
# `coworld_manifest_schema.json` and `runner/episode_request_schema.json`
# are NOT in `data` on either target: nothing reads them at runtime
# (they're generated dynamically from pydantic via
# `coworld.types.coworld_manifest_schema()` /
# `coworld.types.coworld_episode_request_schema()`). The on-disk
# copies exist only as docs / `$schema` URLs referenced from READMEs.
_CORE_SRCS = [
    "src/coworld/__init__.py",
    "src/coworld/certifier.py",
    "src/coworld/commissioner/__init__.py",
    "src/coworld/commissioner/protocol.py",
    "src/coworld/manifest_validation.py",
    "src/coworld/play.py",
    "src/coworld/report.py",
    "src/coworld/reporter_protocol.py",
    "src/coworld/runner/__init__.py",
    "src/coworld/runner/io.py",
    "src/coworld/runner/phase_timings.py",
    "src/coworld/runner/runner.py",
    "src/coworld/schema_validation.py",
    "src/coworld/types.py",
]

# Test-only runfiles for validating checked-in generated schemas against
# coworld.types' dynamic Pydantic schema output.
filegroup(
    name = "generated_schema_files",
    srcs = [
        "src/coworld/coworld_manifest_schema.json",
        "src/coworld/runner/episode_request_schema.json",
    ],
    visibility = ["//packages/coworld/tests:__pkg__"],
)

filegroup(
    name = "docs_files",
    srcs = [
        "COOKBOOK.md",
        "README.md",
    ] + glob(["src/coworld/docs/**/*.md"]),
    visibility = ["//packages/coworld/tests:__pkg__"],
)

py_library(
    name = "coworld_core",
    srcs = _CORE_SRCS,
    data = [
        "src/coworld/py.typed",
        # certifier.py reads the transcript next to its source at runtime.
        "src/coworld/transcripts/coworld-executable.transcript.md",
    ],
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "@pypi//httpx",
        "@pypi//jsonschema",
        "@pypi//packaging",
        "@pypi//pydantic",
        "@pypi//referencing",
        "@pypi//websockets",
    ],
)

py_library(
    name = "coworld",
    srcs = glob(
        ["src/coworld/**/*.py"],
        exclude = _CORE_SRCS,
    ),
    # Runtime data for the CLI and the example servers. Library
    # consumers don't need any of this; they get `py.typed` via
    # `:coworld_core` and nothing else.
    data = glob(
        [
            "src/coworld/examples/**/*.py",
            "src/coworld/examples/**/*.json",
            "src/coworld/examples/**/*.html",
            # *.yaml + Dockerfile* needed by test_canonical_worlds, which
            # asserts the paintarena example's compose.yaml.is_file().
            "src/coworld/examples/**/*.yaml",
            "src/coworld/examples/**/Dockerfile*",
        ],
        allow_empty = True,
    ),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        ":coworld_core",
        "//packages/softmax-cli:softmax",
        "@pypi//cogsguard",
        "@pypi//fastapi",
        "@pypi//httpx",
        "@pypi//jsonschema",
        "@pypi//kubernetes",
        "@pypi//packaging",
        "@pypi//pyarrow",
        "@pypi//pydantic",
        "@pypi//referencing",
        "@pypi//requests",
        "@pypi//rich",
        "@pypi//typer",
        "@pypi//uvicorn",
        "@pypi//websockets",
    ],
)

py_binary(
    name = "coworld_bin",
    srcs = ["src/coworld/cli.py"],
    main = "src/coworld/cli.py",
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [":coworld"],
)

# coworld's own source tree + pyproject.toml, staged into
# //packages/coworld/tests' ruff check target as isort first-party
# detection context. `coworld` isn't in .ruff.toml's known-first-party
# (it's third-party when imported from app_backend), so the per-target test
# ruff would otherwise mis-sort the tests' own `coworld.*` imports. ruff
# needs both the `src/coworld/` layout and the pyproject project root to
# classify `coworld` first-party. pyproject_library auto-emits an
# equivalent `<name>_lint_srcs`; this package hand-rolls its py_library, so
# it hand-rolls this too. See //bazel:ruff.bzl.
filegroup(
    name = "coworld_lint_srcs",
    srcs = glob(["src/**/*.py"]) + ["pyproject.toml"],
    visibility = ["//visibility:public"],
    tags = ["manual"],
)
