[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1", "setuptools_scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coworld"
description = "Coworld certification, upload, and runner tooling"
readme = "src/coworld/COWORLD_README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dynamic = ["version"]
dependencies = [
  "httpx>=0.28.1",
  "jsonschema>=4.25.1",
  "kubernetes>=31.0.0",
  "packaging>=24.0.0",
  "pydantic>=2.11.5",
  "referencing>=0.36.2",
  "rich>=13.7.0",
  "softmax-cli==0.26.10",
  "typer>=0.19.2",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
auth = ["softmax-cli==0.26.10"]
examples = ["cogsguard", "fastapi>=0.115.0", "mettagrid", "numpy>=2.3.0", "uvicorn>=0.34.0"]
test = [
  "cogsguard",
  "fastapi>=0.115.0",
  "mettagrid",
  "numpy>=2.3.0",
  "pytest",
  "pytest-httpserver",
  "pytest-xdist",
  "ruff",
  "uvicorn>=0.34.0",
]

[project.scripts]
coworld = "coworld.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["coworld", "coworld.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
coworld = ["py.typed", "*.json", "*.md", "runner/*.md", "examples/**/*"]

[tool.setuptools.exclude-package-data]
coworld = [
  "**/__pycache__/*",
  "**/*.pyc",
  # Files the Python runtime never reads. Excluding them from the
  # wheel means a non-runtime edit (e.g. updating an example
  # Dockerfile) doesn't change wheel content, doesn't change the
  # @pyenv tree bazel hashes into action keys, and so doesn't
  # invalidate every downstream test that has @pyenv in its
  # transitive deps.
  "**/Dockerfile",
  "examples/**/README.md",
  "examples/**/*_spec.md",
]

[tool.setuptools_scm]
tag_regex = "^coworld-v(?P<version>\\d+\\.\\d+\\.\\d+(?:\\.\\d+)?)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../.."
fallback_version = "0.0.0"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "coworld-v*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]

[tool.uv.sources]
mettagrid = {git = "https://github.com/Metta-AI/mettagrid.git"}
softmax-cli = {git = "https://github.com/Metta-AI/softmax-cli.git"}
cogsguard = { git = "https://github.com/Metta-AI/cogame-cogsguard.git" }

[tool.ruff]
extend = "../../.ruff.toml"
