[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1", "setuptools_scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coworld"
description = "Coworld certification, upload, and runner tooling"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
dynamic = ["version"]
dependencies = [
  "httpx>=0.28.1",
  "jsonschema>=4.25.1",
  "kubernetes>=36.0.2",
  "packaging>=24.0.0",
  "pyarrow>=16.1.0",
  "pydantic>=2.11.5",
  # referencing is a runtime resolver used by jsonschema's referencing
  # machinery; reachable via jsonschema but kept explicit since coworld's
  # schema_validation.py interacts with it directly.
  "referencing>=0.36.2",
  "requests>=2.32",
  "rich>=13.7.0",
  "softmax-cli==0.26.22",
  "typer>=0.19.2",
  "websockets>=15.0.1",
]

[project.optional-dependencies]
auth = ["softmax-cli==0.26.22"]
examples = ["fastapi>=0.115.0", "pyarrow>=16.1.0", "uvicorn>=0.34.0"]
test = [
  "fastapi>=0.115.0",
  "numpy>=2.3.0",
  "pyarrow>=16.1.0",
  "pytest",
  "pytest-httpserver",
  "pytest-xdist",
  "ruff",
  "uvicorn>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/Metta-AI/coworld"
"Bug Tracker" = "https://github.com/Metta-AI/coworld/issues"

[project.scripts]
coworld = "coworld.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["coworld", "coworld.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
coworld = [
  "py.typed",
  "*.json",
  "*.md",
  "docs/**/*.md",
  "transcripts/*.md",
  "runner/*.md",
  "examples/**/*",
  "templates/**/*",
]

[tool.setuptools.exclude-package-data]
coworld = ["**/__pycache__/*", "**/*.pyc"]

[tool.setuptools_scm]
tag_regex = "^coworld-v(?P<version>\\d+\\.\\d+\\.\\d+(?:\\.\\d+)?)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
root = "../.."
fallback_version = "0.0.0"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "coworld-v*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]

[tool.uv.sources]
softmax-cli = { workspace = true }

[tool.ruff]
extend = "../../.ruff.toml"
