load("//bazel:pyproject.bzl", "pyproject_test")

# test_types diffs the checked-in generated schema JSONs (kept in
# `:generated_schema_files`) against coworld.types' dynamic Pydantic
# schema output.
pyproject_test(
    extra_tags = [
        "no-sandbox",
        "requires-network",
    ],
    per_test = {
        "test_types": {"data": ["//packages/coworld:generated_schema_files"]},
    },
    typecheck = False,
)
