load("//bazel:pyproject.bzl", "pyproject_test")

# Bare-source filegroup consumed by //:import_linter_test so grimp can
# walk `packages.coworld.tests` (declared as a root_package in
# .importlinter for the coworld-independence contract). Test deps live
# in `:_tests_lib`; this only ships the .py files for parsing.
filegroup(
    name = "import_linter_srcs",
    srcs = glob(["**/*.py"], exclude = ["**/fixtures/**"]),
    visibility = ["//visibility:public"],
)

# test_types diffs the checked-in generated schema JSONs (kept in
# `:generated_schema_files`) against coworld.types' dynamic Pydantic
# schema output.
pyproject_test(
    extra_tags = [
        "no-sandbox",
        "requires-network",
    ],
    per_test = {
        "test_commissioner_docs": {"data": ["//packages/coworld:docs_files"]},
        "test_coworld_cookbook": {"data": ["//packages/coworld:docs_files"]},
        "test_coworld_macos_docs": {"data": ["//packages/coworld:docs_files"]},
        "test_coworld_artifact_docs": {"data": ["//packages/coworld:docs_files"]},
        "test_coworld_certify_docs": {"data": ["//packages/coworld:docs_files"]},
        "test_coworld_templates": {"data": ["//packages/coworld:package_metadata_files"]},
        "test_types": {"data": ["//packages/coworld:generated_schema_files"]},
    },
    # `coworld` isn't in .ruff.toml's known-first-party (third-party from
    # app_backend); ship its src tree so the ruff lint sorts the tests'
    # `coworld.*` imports first-party.
    ruff_context = ["//packages/coworld:coworld_lint_srcs"],
    typecheck = False,
)
